añadir ruta correcta

--- a/views/final.haml
+++ b/views/final.haml
@@ -1,5 +1,5 @@
 .header
-  Introduce un nombre de usuario que no este asignado
+  Introduce un nombre de usuario que no este asignado2
   -if (!juego)
     %form{:action=>"/post",:method=>"post"}
       Registrate:
