--- a/views/game.haml
+++ b/views/game.haml
@@ -19,8 +19,8 @@
     - HORIZONTALS.each do |row| 
       .gamerow
         - row.each do |p|
-          %a(href=p)
-            %div{:id => "#{p}", :class => "cell #{b[p]}"}
+          //%a(href=p)
+          %div{:id => "#{p}", :class => "cell #{b[p]}"}
     .message
       %h1= m
 
