cambiar css jquery

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -9,5 +9,7 @@
     %link{:rel=>"stylesheet", :href=>"css/style.css", :type=>"text/css"}
     %script{:type=>"text/javascript", :src=>"http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"}
     %script{:type=>"text/javascript", :src=>"/js/app.js"}
+    //%link{:rel=>"stylesheet", :href=>"//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"}
+    %script{ :src=>"//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"}
   %body
     = yield
