--- a/views/game.haml
+++ b/views/game.haml
@@ -23,4 +23,5 @@
           %div{:id => "#{p}", :class => "cell #{b[p]}"}
     .message
       %h1= m
-   
+    #dialog{:title => "Error"}
+      %p Movimiento no permitido
