--- a/views/layout.haml
+++ b/views/layout.haml
@@ -10,6 +10,7 @@
     %script{:type=>"text/javascript", :src=>"http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"}
     %script{:type=>"text/javascript", :src=>"/js/app.js"}
     //%link{:rel=>"stylesheet", :href=>"//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"}
-    %script{ :src=>"//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"}
+    %script{ :src=>"http://code.jquery.com/ui/1.10.3/jquery-ui.js"}
+    %link{:rel=>"stylesheet", :href=>"code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css", :type=>"text/css"}
   %body
     = yield
