--- a/public/css/style.css
+++ b/public/css/style.css
@@ -121,46 +121,29 @@ a {
   position: relative;
   top: 1px; }
 
-#dialog {
-  color: orange;
-  background-color: black; }
-
 .ui-dialog {
   color: orange;
-  background-color: black; }
+  background-color: black;
+  border-color: orange;
+  border-style: solid;
+  border-width: 5px;
+  margin-left: 5%;
+  margin-top: 10%; }
 
 .ui-button {
   margin-left: 70%;
-  -moz-box-shadow: inset 0px 1px 0px 0px #fce2c1;
-  -webkit-box-shadow: inset 0px 1px 0px 0px #fce2c1;
-  box-shadow: inset 0px 1px 0px 0px #fce2c1;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffc477), color-stop(1, #fb9e25));
-  background: -moz-linear-gradient(center top, #ffc477 5%, #fb9e25 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffc477', endColorstr='#fb9e25');
-  background-color: #ffc477;
-  -webkit-border-top-left-radius: 0px;
-  -moz-border-radius-topleft: 0px;
-  border-top-left-radius: 0px;
-  -webkit-border-top-right-radius: 0px;
-  -moz-border-radius-topright: 0px;
-  border-top-right-radius: 0px;
-  -webkit-border-bottom-right-radius: 0px;
-  -moz-border-radius-bottomright: 0px;
-  border-bottom-right-radius: 0px;
-  -webkit-border-bottom-left-radius: 0px;
-  -moz-border-radius-bottomleft: 0px;
-  border-bottom-left-radius: 0px;
-  text-indent: 1px;
   border: 3px solid #000000;
-  display: inline-block;
   color: #000000;
   font-family: Arial;
   font-size: 19px;
-  font-weight: bold;
-  font-style: normal;
-  height: 40px;
-  line-height: 40px;
+  height: 30px;
   width: 65px;
-  text-decoration: none;
-  text-align: center;
-  text-shadow: 1px 1px 0px #cc9f52; }
+  text-align: center; }
+
+.ui-widget-header {
+  margin-left: 5%;
+  margin-top: 10%;
+  font-weight: bold; }
+
+.ui-dialog .ui-dialog-titlebar {
+  position: relative; }
