--- a/views/styles.scss
+++ b/views/styles.scss
@@ -165,7 +165,12 @@ a{
   border-color:  orange;
   border-style:solid;
   border-width:5px;
-   margin-left: 5%;
+  margin-left: 5%;
+  margin-top: 10%;
+}
+
+.ui-helper-clearfix {
+  margin-left: 5%;
   margin-top: 10%;
 }
 
@@ -179,6 +184,7 @@ a{
   height:30px;
   width:65px;
   text-align:center;
+  background-color:orange;
 
 }
 
