--- a/public/css/style.css
+++ b/public/css/style.css
@@ -124,7 +124,7 @@ a {
 .ui-dialog {
   color: orange;
   background-color: black;
-  border-color: orange;
+  border-color: #ff4000;
   border-style: solid;
   border-width: 5px;
   margin-left: 5%;
@@ -135,7 +135,6 @@ a {
   margin-top: 10%; }
 
 .ui-button {
-  margin-left: 70%;
   border: 3px solid #000000;
   color: #000000;
   font-family: Arial;
@@ -143,7 +142,7 @@ a {
   height: 30px;
   width: 65px;
   text-align: center;
-  background-color: orange; }
+  background-color: #ff4000; }
 
 .ui-widget-header {
   margin-left: 5%;
