--- a/views/styles.scss
+++ b/views/styles.scss
@@ -160,9 +160,9 @@ a{
 
 
 .ui-dialog{
-  color:orange;
+  color: $orange;
   background-color: black;
-  border-color:  $orange;
+  border-color: $orange;
   border-style:solid;
   border-width:5px;
   margin-left: 5%;
@@ -177,7 +177,7 @@ a{
 
 
 .ui-button{
-  
+  margin-left: 60%;
   border:3px solid #000000;
   color:#000000;
   font-family:Arial;
@@ -197,4 +197,9 @@ a{
 
 .ui-dialog .ui-dialog-titlebar {
   position: relative;
+  margin-left: 5%;
+}
+
+#dialog p {
+  margin-left: 5%;
 }
